# aprMaqI_CEIA

./: .gitignore  CriteriosAprobacion.md  Datasets.md  README.md  pyproject.toml
TP/source/: exploratory_analysis.ipynb  geolocate_stations.ipynb  imputate_missing.ipynb  impute_missing.ipynb  train_test_model.ipynb  utils.py
clase0/: 1 - Usando Numpy.ipynb  2 - Usando Matplotlib.ipynb  3 - Usando Pandas - Introduccion.ipynb  4 - Usando Pandas - Operando.ipynb  5 - Usando Pandas - Fuentes de Datos.ipynb  6 - Graficando con Pandas.ipynb  7 - Usando Seaborn.ipynb
clase0/practica/: 1 - Ejercicios Numpy.ipynb  2 - Ejercicios Matplotlib.ipynb  3 - Ejercicios Pandas - Homeless.ipynb  4 - Ejercicios Pandas - Temperatura.ipynb  5 - Ejercicios Pandas - Aprender 2018.ipynb  6 - Ejercicios Pandas - Estadística Descriptiva.ipynb  7 - Ejercicios Pandas - Agrupamiento.ipynb
clase2/: README.md
clase2/ejercicios/: Ejercicios.md
clase2/jupyter_notebooks/: clasificacion.ipynb  hyper_genalg.py  hyperparameters.ipynb  modelo_regresion_lineal.pkl  regresion.ipynb
clase3/ejercicios/: Ejercicios.md
clase3/jupyter_notebooks/: clasificacion.ipynb  svm.ipynb
clase4/jupyter_notebooks/: arbol_clasificacion.dot  arbol_clasificacion_level7.dot  trees.ipynb
clase5/jupyter_notebooks/: pytorch.ipynb  svm.ipynb
clase6/: README.md
clase6/ejercicios/: Ejercicios.md
clase6/jupyter_notebooks/: cluster.ipynb  pca.ipynb  pytorch.ipynb
clase7/: README.md
clase7/ejercicios/: Ejercicios.md
clase7/jupyter_notebooks/: cluster.ipynb  pred_streng_example.ipynb  pred_strength.py
