[tool.poetry]
name = "aprmaqi-ceia"
version = "0.1.0"
description = ""
authors = ["Facundo Adrián Lucianna <facundolucianna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
optuna = "^3.6.1"
jupyter = "^1.0.0"
scikit-image = "^0.23.2"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
